src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Product_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Product ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Product_Name__c</fullName>
        <label>External Product Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Go_Live_of_Opp__c</fullName>
        <label>Go Live of Opp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Implementation Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Member_Maximum__c</fullName>
        <label>Member Maximum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Tailored_Options__c</fullName>
        <label>Non Tailored Options</label>
        <picklist>
            <picklistValues>
                <fullName>Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHR/Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Device Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Communities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Challenges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rally Coins (Rally Base Rewards)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Launch Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Tools for Live Coach</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>One_Time_Purchase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>One Time Purchase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Account_Type__c</fullName>
        <formula>IF(
NOT(ISBLANK(TEXT(Opportunity.Account.Type))), TEXT(Opportunity.Account.Type), Opportunity.Account.RecordType.Name)</formula>
        <label>Opportunity Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_ID__c</fullName>
        <formula>Opportunity.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_Order__c</fullName>
        <formula>IF( 
ISPICKVAL(Opportunity_Product_Type__c, &apos;Package&apos;), 1, 

IF( 
ISPICKVAL(Opportunity_Product_Type__c, &apos;Implementation Fee&apos;), 2, 

IF( 
ISPICKVAL(Opportunity_Product_Type__c, &apos;Add-On&apos;), 3, 

IF( 
ISPICKVAL(Opportunity_Product_Type__c, &apos;Up-Sell Feature&apos;), 4, 

IF( 
ISPICKVAL(Opportunity_Product_Type__c, &apos;Feature&apos;), 5, 100)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Product Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_Sub_Type__c</fullName>
        <label>Opportunity Product Sub-Type</label>
        <picklist>
            <picklistValues>
                <fullName>Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tailored Outcome Rewards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tailored Activity Rewards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Defined Outcomes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Defined Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Time Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_Type__c</fullName>
        <label>Opportunity Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add-On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Up-Sell Feature</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Opportunity_Product_ID__c</fullName>
        <label>Parent Opportunity Product ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Package_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parent Package Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_Book_ID__c</fullName>
        <formula>Opportunity.Pricebook2Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Book ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priceline_Component_Name__c</fullName>
        <label>Priceline Component Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Status__c</fullName>
        <label>Pricing Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Type_Formula__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.Product_Sub_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Sub-Type Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type_Formula__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.Product_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_Description__c</fullName>
        <label>Quantity Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Period__c</fullName>
        <label>Rate Period</label>
        <picklist>
            <picklistValues>
                <fullName>Per Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rate_Type__c</fullName>
        <label>Rate Type</label>
        <picklist>
            <picklistValues>
                <fullName>Per Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Participant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Unit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reward_Options__c</fullName>
        <label>Reward Options</label>
        <picklist>
            <controllingField>Opportunity_Product_Sub_Type__c</controllingField>
            <picklistValues>
                <fullName>Achieve Your Blood Pressure Goal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Achieve Your Glucose or A1c Goal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Achieve your Nicotine Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Achieve Your Target BMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Achieve Your Target BMI Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Achieve Your Tobacco Usage Goal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Achieve Your Total Cholesterol Goal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Achieve Your Waist Measurement Goal - Females</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Achieve Your Waist Measurement Goal - Males</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete 3 Missions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete a Biometric Screening or Annual Physical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete a Challenge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete a CHF DM Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete a COPD DM Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete a Diabetes DM Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete a Healthy Back Coaching Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete a Healthy Weight Coaching Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete a Maternity Support Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete an Annual Physical or Prenatal Screening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete an Asthma DM Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete any Telephonic Wellness Coaching program OR complete a Rally Mission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete any Wellness Coaching Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete a Personal Health Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete a Quit Power Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete a Rally Mission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete a TDS - Angina program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete a TDS – Back program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete a TDS – Benign Prostatic Hypertrophy program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete a TDS – Benign Uterine Conditions program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete a TDS – Breast Cancer program</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tailored_Options__c</fullName>
        <label>Tailored Options</label>
        <picklist>
            <picklistValues>
                <fullName>Friendly URL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-Branding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Choice of Long vs. Short Health Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Campaigns (Inline &amp; Email)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unique ID for Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Survey - Add up to 10 Qs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Communities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Challenges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource Page</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Total_Annual_Value__c</fullName>
        <description>Total value of the opportunity (Quantity*List Price)*12. Does not include one time implementation fee.</description>
        <formula>( Quantity  *  ListPrice  )   * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total value of the opportunity (Quantity*List Price)*12. Does not include one time implementation fee.</inlineHelpText>
        <label>Total Annual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_1__c</fullName>
        <formula>If(YEAR(  Go_Live_of_Opp__c  ) == Year( Effective_Date__c), True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year_2__c</fullName>
        <formula>If(YEAR( Go_Live_of_Opp__c) + 1 == Year( Effective_Date__c), True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year_3__c</fullName>
        <formula>If(YEAR( Go_Live_of_Opp__c) + 2 == Year( Effective_Date__c), True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zero_Quantity_Line__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zero Quantity Line</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>